# cpptemplate

./: .clang-format  .clang-tidy  .doxygen  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/executable/: CMakeLists.txt  main.cpp
src/shared_library/: CMakeLists.txt  shared.cpp
src/static_library/: CMakeLists.txt  static.cpp
src/target1/: CMakeLists.txt  main.cpp
