SET(TARGET executable)

FILE(GLOB_RECURSE SRC_FILES "${SRC_DIR}/${TARGET}/*.cpp" "${SRC_DIR}/${TARGET}/*.c")
ADD_EXECUTABLE(${TARGET} ${SRC_FILES})

TARGET_INCLUDE_DIRECTORIES(${TARGET} PRIVATE ${HDR_DIR})

FILE(GLOB_RECURSE LIB_FILES "${LIB_DIR}/*.a" "${LIB_DIR}/*.so")
TARGET_LINK_LIBRARIES(${TARGET} PRIVATE ${LIB_FILES})

FIND_PACKAGE(Qt5 COMPONENTS Core REQUIRED)
TARGET_INCLUDE_DIRECTORIES(${TARGET} PRIVATE Qt)
TARGET_LINK_LIBRARIES(${TARGET} PRIVATE ${Qt5Core_LIBRARIES})

FIND_PACKAGE(Boost REQUIRED)
TARGET_INCLUDE_DIRECTORIES(${TARGET} PRIVATE ${Boost_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(${TARGET} PRIVATE ${Boost_LIBRARIES})

FIND_PACKAGE(Vulkan REQUIRED)
TARGET_INCLUDE_DIRECTORIES(${TARGET} PRIVATE ${Vulkan_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(${TARGET} PRIVATE ${Vulkan_LIBRARIES})

FIND_PACKAGE(GTest REQUIRED)
TARGET_INCLUDE_DIRECTORIES(${TARGET} PRIVATE ${GTest_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(${TARGET} PRIVATE ${GTest_LIBRARIES})

SET(COMPILER_OPTIONS -Wall -Wextra -Wpedantic -Werror -fsanitize=address,undefined#[[,thread]])
TARGET_COMPILE_OPTIONS(${TARGET} PUBLIC ${COMPILER_OPTIONS})
SET(LINKER_OPTIONS -pthread -lasan -lubsan #[[-ltsan]] -lX11)
TARGET_LINK_OPTIONS(${TARGET} PUBLIC ${LINKER_OPTIONS})

SET_TARGET_PROPERTIES(${TARGET} PROPERTIES C_EXTENSIONS OFF)
SET_TARGET_PROPERTIES(${TARGET} PROPERTIES C_STANDARD 17)
SET_TARGET_PROPERTIES(${TARGET} PROPERTIES C_STANDARD_REQUIRED ON)
SET_TARGET_PROPERTIES(${TARGET} PROPERTIES CXX_EXTENSIONS OFF)
SET_TARGET_PROPERTIES(${TARGET} PROPERTIES CXX_STANDARD 17)
SET_TARGET_PROPERTIES(${TARGET} PROPERTIES CXX_STANDARD_REQUIRED ON)

ADD_DEPENDENCIES(dev ${TARGET})
