SET(TARGET target1)

FILE(GLOB_RECURSE SRC_FILES "${SRC_DIR}/${TARGET}/*.cpp")
FILE(GLOB_RECURSE LIB_FILES "${LIB_DIR}/*")

ADD_EXECUTABLE(${TARGET} ${SRC_FILES} ${LIB_FILES})

TARGET_INCLUDE_DIRECTORIES(${TARGET} PRIVATE ${HDR_DIR})

FIND_PACKAGE(Qt5 COMPONENTS Core REQUIRED)
TARGET_INCLUDE_DIRECTORIES(${TARGET} PRIVATE Qt)
TARGET_LINK_LIBRARIES(${TARGET} PRIVATE ${Qt5Core_LIBRARIES})

FIND_PACKAGE(Boost REQUIRED)
TARGET_INCLUDE_DIRECTORIES(${TARGET} PRIVATE ${Boost_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(${TARGET} PRIVATE ${Boost_LIBRARIES})

FIND_PACKAGE(Vulkan REQUIRED)
TARGET_INCLUDE_DIRECTORIES(${TARGET} PRIVATE ${Vulkan_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(${TARGET} PRIVATE ${Vulkan_LIBRARIES})

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(glfw3 REQUIRED)
TARGET_INCLUDE_DIRECTORIES(${TARGET} PRIVATE ${OpenGL_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(${TARGET} PRIVATE ${OpenGL_LIBRARIES})

FIND_PACKAGE(GTest REQUIRED)
TARGET_INCLUDE_DIRECTORIES(${TARGET} PRIVATE ${GTest_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(${TARGET} PRIVATE ${GTest_LIBRARIES})

TARGET_COMPILE_OPTIONS(${TARGET} PUBLIC ${COMPILER_OPTIONS})
TARGET_LINK_OPTIONS(${TARGET} PUBLIC ${LINKER_OPTIONS})

ADD_DEPENDENCIES(dev ${TARGET})
